project-controls in header

--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "ember": "~1.2",
     "ember-data": "~1.0.0-beta.4",
     "jqueryui": "~1.10.3",
-    "ember-localstorage-adapter": "latest"
+    "ember-localstorage-adapter": "latest",
+    "font-awesome": "~4.0.3"
   },
   "devDependencies": {
     "ember-mocha-adapter": "0.1.2"
