--- a/node/package.json
+++ b/node/package.json
@@ -1,9 +1,10 @@
 {
-    "name": "proto",
-    "description": "Proto design",
-    "version": "0.0.1",
-    "private": true,
-    "dependencies": {
-        "express": "3.4"
-    }
+  "name": "proto",
+  "description": "Proto design",
+  "version": "0.0.1",
+  "private": true,
+  "dependencies": {
+    "express": "3.4",
+    "mongoose": "3.8"
+  }
 }
