--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "ember": "~1.2",
+    "jquery-ember":"jquery#2.0.3",
     "ember-data": "~1.0.0-beta.4",
     "jqueryui": "~1.10.3",
     "ember-localstorage-adapter": "latest",
